# JPEG2000-Implement

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
JPEG2000/: CMakeLists.txt  matrix.cpp  matrix.h  readme.md  wavelet.cpp  wavelet.h
src/: CMakeLists.txt  CMakePresets.json  readme.md
src/Bitmap/: bitmap.h
src/JPEG2000/: CMakeLists.txt  matrix.h  matrix.tpp  preprocessing.h  preprocessing.tpp  readme.md  wavelet.cpp  wavelet.h
src/lib/JPEG2000/: matrix.h  preprocessing.h  preprocessing.tpp
src/test/: CMakeLists.txt  preprocessing.cpp
test/: CMakeLists.txt  bitmap.cpp  bitmapWR.cpp  matrix.cpp  matrix3D.cpp  matrixRead.cpp  preprocessing.cpp
